<resources>
    <string name="app_name">MusicApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="previous">Previous</string>
    <string name="reset">Reset</string>
    <string name="back">To list</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>